Allow CUDA backend as well